Fix remaining SonarCloud issues: use toList() and explicit timezone